--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,3 +1,16 @@
+/* for custom scrollbar for webkit browser*/
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 .cart-dropdown-container {
     position: absolute;
     width: 240px;
@@ -20,10 +33,10 @@
         height: 240px;
         display: flex;
         flex-direction: column;
-        overflow: scroll;
+        overflow: auto;
     }
 
     button {
-        margin-top: auto;
+        margin-top: 20px;
     }
 }
