--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -15,6 +15,7 @@
     cursor: pointer;
     display: flex;
     justify-content: center;
+    align-items: center;
 
     &:hover {
         background-color: white;
@@ -41,6 +42,41 @@
             background-color: black;
             color: white;
             border: none;
+        }
+    }
+
+    &.payment {
+        margin-top: 20px;
+        margin-left: auto;
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+
+        &:hover {
+            background-color: black;
+            color: white;
+            border: none;
+        }
+    }
+}
+
+.button-container .spinner-inButton {
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+    border: 3px solid rgba(195, 195, 195, 0.6);
+    border-radius: 50%;
+    border-top-color: #636767;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+    @keyframes spin {
+        to {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+    @-webkit-keyframes spin {
+        to {
+            -webkit-transform: rotate(360deg);
         }
     }
 }
